// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Track /> @render default 1`] = `
<tr
  className="track"
  onClick={[MockFunction]}
>
  <td>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-play fa-w-14 "
      data-icon="play"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </td>
  <td>
    sample title
  </td>
  <td>
    sample artist
  </td>
  <td>
    sample album
  </td>
</tr>
`;

exports[`<Track /> @render with current track matching & playing 1`] = `
<tr
  className="track selected"
  onClick={[MockFunction]}
>
  <td>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-pause fa-w-14 "
      data-icon="pause"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </td>
  <td>
    sample title
  </td>
  <td>
    sample artist
  </td>
  <td>
    sample album
  </td>
</tr>
`;
